--- a/index.html
+++ b/index.html
@@ -5,38 +5,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Classifica Serie A - Girone Ritorno</title>
 <style>
-  body {
-    font-family: 'Segoe UI', Arial, sans-serif;
-    background: #f9f9f9;
+  html, body {
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
+    height: 100%;
+    font-family: 'Segoe UI', Arial, sans-serif;
+    background: #f9f9f9;
   }
 
   .container {
-    width: 95%;
-    max-width: 900px;
-    margin: 20px;
-    background: #ffffff;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    padding: 20px;
-    text-align: center;
-    position: relative;
-    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
   }
 
   h1 {
     color: #0c5a2b; /* verde Serie A */
     font-size: 2rem;
-    margin-bottom: 10px;
+    margin: 10px 0;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
-    position: relative;
-    z-index: 2;
   }
 
   h1 img {
@@ -44,26 +39,11 @@
     height: 40px;
   }
 
-  iframe {
-    width: 100%;
-    height: 600px;
-    border: none;
-    border-radius: 8px;
-    overflow: hidden;
-  }
-
-  /* Palloni decorativi dietro */
   .palloni {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    pointer-events: none;
-    z-index: 0;
     display: flex;
     justify-content: center;
     gap: 10px;
-    flex-wrap: wrap;
+    margin-bottom: 10px;
   }
 
   .palloni img {
@@ -78,9 +58,15 @@
     100% { transform: translateY(0px); }
   }
 
+  iframe {
+    width: 100%;
+    height: calc(100% - 120px); /* spazio per header + palloni */
+    border: none;
+  }
+
   @media(max-width:600px){
     h1 { font-size: 1.5rem; }
-    iframe { height: 500px; }
+    .palloni img { width: 20px; }
   }
 </style>
 </head>
@@ -97,7 +83,10 @@
       Classifica Serie A - Girone Ritorno
     </h1>
 
-    <iframe id="classifica" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT8q6C66WffmTwyx_R7vRys5-je5w2z5TrGY-Kzzx2lVw29s_sxaloluiMHo-jyig/pubhtml?gid=1368345376&single=true"></iframe>
+    <!-- Iframe full-page: mostra A1:U32 -->
+    <iframe id="classifica"
+      src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT8q6C66WffmTwyx_R7vRys5-je5w2z5TrGY-Kzzx2lVw29s_sxaloluiMHo-jyig/pubhtml?gid=1368345376&single=true&range=A1:U32">
+    </iframe>
   </div>
 
   <script>
@@ -109,3 +98,4 @@
   </script>
 </body>
 </html>
+
