--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   .container {
     width: 100%;
     height: 100%;
-    padding: 0;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -25,7 +24,7 @@
   }
 
   h1 {
-    color: #0c5a2b; /* verde Serie A */
+    color: #0c5a2b;
     font-size: 2rem;
     margin: 10px 0;
     text-align: center;
@@ -47,14 +46,13 @@
   <div class="container">
     <h1>Classifica Serie A - Girone Ritorno</h1>
 
-    <!-- Iframe full-page: mostra A1:U32 -->
     <iframe id="classifica"
       src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT8q6C66WffmTwyx_R7vRys5-je5w2z5TrGY-Kzzx2lVw29s_sxaloluiMHo-jyig/pubhtml?gid=1368345376&single=true&range=A1:U32">
     </iframe>
   </div>
 
   <script>
-    // Refresh iframe ad ogni load
+    // Refresh ad ogni load
     window.onload = function() {
       const iframe = document.getElementById('classifica');
       iframe.src = iframe.src + '?t=' + new Date().getTime();
@@ -68,5 +66,6 @@
   </script>
 </body>
 </html>
+
 
 
