--- a/index.html
+++ b/index.html
@@ -5,54 +5,46 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Classifica Serie A - Girone Ritorno</title>
 <style>
-  html, body {
+  body {
     margin: 0;
-    padding: 0;
-    height: 100%;
     font-family: 'Segoe UI', Arial, sans-serif;
     background: #f9f9f9;
   }
-
   h1 {
     text-align: center;
     color: #0c5a2b;
     margin: 10px 0;
   }
-
   iframe {
     width: 100%;
-    height: calc(100% - 50px); /* spazio per header */
+    height: 90vh;
     border: none;
-  }
-
-  @media(max-width:600px){
-    h1 { font-size: 1.5rem; }
-    iframe { height: calc(100% - 45px); }
   }
 </style>
 </head>
 <body>
-  <h1>Classifica Serie A - Girone Ritorno</h1>
+<h1>Classifica Serie A - Girone Ritorno</h1>
 
-  <iframe id="classifica"
-    src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT8q6C66WffmTwyx_R7vRys5-je5w2z5TrGY-Kzzx2lVw29s_sxaloluiMHo-jyig/pubhtml">
-  </iframe>
+<iframe id="classifica"
+  src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT8q6C66WffmTwyx_R7vRys5-je5w2z5TrGY-Kzzx2lVw29s_sxaloluiMHo-jyig/pubhtml">
+</iframe>
 
-  <script>
-    // Forza reload ad ogni F5
-    window.onload = function() {
-      const iframe = document.getElementById('classifica');
-      iframe.src = iframe.src + '?t=' + new Date().getTime();
-    };
+<script>
+  // forza reload ad ogni F5
+  window.onload = function() {
+    const iframe = document.getElementById('classifica');
+    iframe.src = iframe.src + '?t=' + new Date().getTime();
+  };
 
-    // Refresh automatico ogni ora
-    setInterval(() => {
-      const iframe = document.getElementById('classifica');
-      iframe.src = iframe.src + '?t=' + new Date().getTime();
-    }, 3600000); // 3600000 ms = 1 ora
-  </script>
+  // refresh automatico ogni ora
+  setInterval(() => {
+    const iframe = document.getElementById('classifica');
+    iframe.src = iframe.src + '?t=' + new Date().getTime();
+  }, 3600000);
+</script>
 </body>
 </html>
+
 
 
 
